<resources>
    <string name="app_name">Movie App</string>
    <string name="search">Search</string>
    <string name="poster_of_the_movie">Poster of the movie</string>
    <string name="error_msg">Something went wrong</string>
    <string name="error_loading_movies">An error has occured while trying to load movies. Please try again</string>
    <string name="retry">Retry</string>
    <string name="hint_enter_text">Enter text</string>
    <string name="error_could_not_find_movie">Could not find any movie matching your criteria</string>
    <string name="star_icon">star icon</string>
    <string name="favorite">Favorite</string>
    <string name="to_watch">To Watch</string>
    <string name="overview">OVERVIEW</string>
    <string name="eye_icon">eye icon</string>
    <string name="favorites">Favorites</string>
</resources>